syntax = "proto3";

package ranking.v1;
option go_package = "/ranking/v1;rankingV1";

import "google/protobuf/timestamp.proto";

message Author {
  int64 id = 1;
  string name = 2;
}

message Article {
  int64 id = 1;
  string title = 2;
  string content = 3;
  Author author = 4;
  int32 status = 5;
  google.protobuf.Timestamp ctime = 6;
  google.protobuf.Timestamp utime = 7;
}

service RankingService {
  rpc TopN(TopNRequest) returns(TopNResponse);
  rpc RankTopN(RankTopNRequest) returns(RankTopNResponse);
}

message TopNRequest {
}

message TopNResponse {
  repeated Article articles = 1;
}

message RankTopNRequest {

}

message RankTopNResponse {

}